# smart-home-energy-optimizer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.txt  verify.py  verify_step1.py  verify_step2.py  verify_step3.py
docs/: ARCHITECTURE.md
frontend/: index.html
src/optimizer/: auth.py  config.py  database.py  demo.py  main.py  models.py  schemas.py
src/optimizer/api/: auth_routes.py  routes.py  websocket_manager.py
src/optimizer/services/: alerts.py  analytics.py  optimizer.py  sensors.py  weather.py
