[project]
name = "smart-home-energy-optimizer"
version = "0.1.0"
description = "Demo Smart Home Energy Optimizer API"
authors = [{ name = "Rajiv" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "sqlmodel>=0.0.14",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.3"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
